src/test/deca/context/valid/test_override.deca
// Description:
//    Programme testant une redefinition 
//	  Etape(s) : A, B 
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//    2
//
// Historique:
//    cree le 21/01/2021

class A  {
	int x = 5 ;
	int getX(){
		return x;
	}
}

class B extends A {
	int y = 2 ;
	int getX(){
		return y;
	}	
}

{
	B b = new B();
	println(b.getX());	
}
